fixed width flicker

--- a/assets/scss/components/about.scss
+++ b/assets/scss/components/about.scss
@@ -38,7 +38,7 @@
 			&.left {
 				left : 4%;
 				top  : 5%;
-
+				width: 30%;
 				.description, .pretitle {
 					text-align: left;
 				}
